# hypermodern-python

./: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: hypermodern_python.console.imports  tests.test_console.imports  tests.test_wikipedia.imports
.pytype/pyi/tests/: test_console.pyi
docs/: conf.py
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
