[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "Learning hypermodern Python from cjolowicz"
authors = ["Bruno Rocha <rocha.bruno.alexandre@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rocha-bruno/hypermodern-python"
repository = "https://github.com/rocha-bruno/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"